Reformulação do Formulário Profissional
Foi reformulado os layouts relacionados ao formulario Profissional
(implementado os RadioGroups e correção do visual) e suas Activites
correspondentes. E foi feita uma pequena correção em alguns layouts do
formulário do Adulto.

--- a/PCATool/app/src/main/res/layout/activity_adulto_h.xml
+++ b/PCATool/app/src/main/res/layout/activity_adulto_h.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="5dp"
+            android:paddingTop="10dp"
             android:text="@string/HText1"
             android:textStyle="bold" />
 
