--- a/PCATool/app/src/main/res/layout/activity_adulto_a.xml
+++ b/PCATool/app/src/main/res/layout/activity_adulto_a.xml
@@ -29,6 +29,7 @@
             android:id="@+id/txtQuestaoA1A"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="@string/A1" />
 
         <RadioGroup
