--- a/PCATool/app/src/main/res/layout/activity_adulto_e.xml
+++ b/PCATool/app/src/main/res/layout/activity_adulto_e.xml
@@ -29,6 +29,7 @@
             android:id="@+id/txtQuestaoE1A"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:text="@string/E1" />
 
         <RadioGroup
