--- a/PCATool/app/src/main/res/layout/activity_adulto_g.xml
+++ b/PCATool/app/src/main/res/layout/activity_adulto_g.xml
@@ -15,7 +15,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <TextView
             android:id="@+id/txtTituloFormularioGA"
             android:layout_width="match_parent"
@@ -29,6 +28,7 @@
             android:id="@+id/txtDescricao1GA"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:paddingBottom="5dp"
             android:text="@string/GText1"
             android:textStyle="bold" />
