--- a/PCATool/app/src/main/res/layout/activity_adulto_i.xml
+++ b/PCATool/app/src/main/res/layout/activity_adulto_i.xml
@@ -29,6 +29,7 @@
             android:id="@+id/txtDescricao1IA"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:paddingBottom="5dp"
             android:text="@string/IText1"
             android:textStyle="bold" />
