--- a/PCATool/app/src/main/res/values/stringModuloAdulto.xml
+++ b/PCATool/app/src/main/res/values/stringModuloAdulto.xml
@@ -84,9 +84,9 @@
 
     <!--Padroes F-->
     <string name="tituloF">F – COORDENAÇÃO – SISTEMA DE INFORMAÇÕES</string>
-    <string name="F1">F1. Quando você vai no “nome do serviço de saúde / ou nome médico/ enfermeiro” você leva algum dos registros de saúde ou boletins de atendimento que você recebeu no passado? (exemplificar se não entender “registro”: fichas de atendimento de emergência, resultado de exames de laboratório)</string>
-    <string name="F2">F2. Quando você vai ao “nome do serviço de saúde / ou nome médico/ enfermeiro”, o seu prontuário (história clínica) está sempre disponível na consulta?</string>
-    <string name="F3">F3. Você poderia ler (consultar) o seu prontuário/ficha se quisesse no “nome do serviço de saúde / ou nome médico/enfermeiro”?</string>
+    <string name="F1">F1 – Quando você vai no “nome do serviço de saúde / ou nome médico/ enfermeiro” você leva algum dos registros de saúde ou boletins de atendimento que você recebeu no passado? (exemplificar se não entender “registro”: fichas de atendimento de emergência, resultado de exames de laboratório)</string>
+    <string name="F2">F2 – Quando você vai ao “nome do serviço de saúde / ou nome médico/ enfermeiro”, o seu prontuário (história clínica) está sempre disponível na consulta?</string>
+    <string name="F3">F3 – Você poderia ler (consultar) o seu prontuário/ficha se quisesse no “nome do serviço de saúde / ou nome médico/enfermeiro”?</string>
     
     <!--Padroes G-->
     <string name="tituloG">G – INTEGRALIDADE – SERVIÇOS DISPONÍVEIS</string>
