--- a/PCATool/app/src/main/res/layout/activity_escore.xml
+++ b/PCATool/app/src/main/res/layout/activity_escore.xml
@@ -10,4 +10,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.developer.barbosa.pcatool.activity.Escore">
 
+    <Button
+        android:id="@+id/btnCadastrar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Cadastrar Questionario" />
+
+    <Button
+        android:id="@+id/btnExibir"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnCadastrar"
+        android:text="Exibir Questionarios" />
 </RelativeLayout>
