--- a/PCATool/app/src/main/res/layout/activity_modulo_questionario.xml
+++ b/PCATool/app/src/main/res/layout/activity_modulo_questionario.xml
@@ -12,17 +12,80 @@
     tools:context="com.developer.barbosa.pcatool.activity.ModuloQuestionario">
 
 
-    <Button
-        android:text="Versão Adulto"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnAdulto"
-        android:layout_gravity="center_horizontal|center_vertical" />
+        android:layout_marginTop="10dp"
+        android:text="Data de realização:"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/txtDataRealizacao"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:hint="  /  /"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Regional:"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/spnRegional"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Posto de Saúde:"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/spnPosto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Selecione o tipo do questionário:"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <Button
-        android:text="Versão Profissional"
+        android:id="@+id/btnAdulto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:text="Versão Adulto"
+        android:textSize="18sp" />
+
+    <Button
         android:id="@+id/btnProfissional"
-        android:layout_gravity="center_horizontal|center_vertical" />
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:text="Versão Profissional"
+        android:textSize="18sp" />
 </LinearLayout>
