--- a/PCATool/app/src/main/res/layout/activity_adulto_a.xml
+++ b/PCATool/app/src/main/res/layout/activity_adulto_a.xml
@@ -38,14 +38,14 @@
             android:layout_height="match_parent">
 
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/rdoNaoA1A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/Nao" />
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/rdoSimA1A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -84,21 +84,21 @@
             android:layout_height="match_parent">
 
             <RadioButton
-                android:id="@+id/radioButton3"
+                android:id="@+id/rdoNaoA2A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/NaoA2" />
 
             <RadioButton
-                android:id="@+id/radioButton4"
+                android:id="@+id/rdoSim1A2A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/SimA21" />
 
             <RadioButton
-                android:id="@+id/radioButton5"
+                android:id="@+id/rdoSim2A2A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -137,35 +137,35 @@
             android:layout_height="match_parent">
 
             <RadioButton
-                android:id="@+id/radioButton6"
+                android:id="@+id/rdoNaoA3A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/NaoA3" />
 
             <RadioButton
-                android:id="@+id/radioButton7"
+                android:id="@+id/rdoSim1A3A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/SimA31" />
 
             <RadioButton
-                android:id="@+id/radioButton8"
+                android:id="@+id/rdoSim2A3A"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/SimA32" />
 
             <RadioButton
-                android:id="@+id/radioButton9"
+                android:id="@+id/rdoSim3A3A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/SimA33" />
 
             <RadioButton
-                android:id="@+id/radioButton10"
+                android:id="@+id/rdoSim4A3A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -192,6 +192,30 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:id="@+id/txtDescricao1AA"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingBottom="5dp"
+            android:paddingTop="20dp"
+            android:text="@string/AText1"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@android:color/darker_gray"></View>
+
+        <Button
+            android:id="@+id/btnPreencherAutomaticamente"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Identificar Serviço/Médico/Enfermeiro Automaticamente" />
+
+        <TextView
             android:id="@+id/txtQuestaoA4A"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -203,12 +227,35 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <TextView
-            android:id="@+id/textView7"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/Esclarecer" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:text="Esclareça ao entrevistado que:" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="A partir de agora, todas as perguntas seguintes serão sobre o(a):" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txtQuestaoA5A"
