--- a/PCATool/app/src/main/res/layout/activity_escore.xml
+++ b/PCATool/app/src/main/res/layout/activity_escore.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.developer.barbosa.pcatool.activity.Escore">
+    tools:context="com.developer.barbosa.pcatool.activity.telas.Escore">
 
     <Button
         android:id="@+id/btnCadastrar"
