--- a/PCATool/app/src/main/res/layout/activity_escore.xml
+++ b/PCATool/app/src/main/res/layout/activity_escore.xml
@@ -27,4 +27,13 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btnCadastrar"
         android:text="Exibir Questionarios" />
+
+    <Button
+        android:id="@+id/btnVoltarInicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnExibir"
+        android:text="VOLTAR PARA O INÍCIO" />
 </RelativeLayout>
